--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 uvicorn==0.17.6
-fastapi
-python-multipart
-jinja2
-numpy
+fastapi==0.78.0
+python-multipart==0.0.5
+jinja2==3.1.2
+numpy=1.17.0 
 scipy
-scikit-learn
-joblib
+scikit-learn==1.0.2
+joblib==1.1.0
