--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ uvicorn==0.17.6
 fastapi==0.78.0
 python-multipart==0.0.5
 jinja2==3.1.2
-numpy=1.17.0 
+numpy==1.17.0 
 scipy
 scikit-learn==1.0.2
 joblib==1.1.0
