--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 uvicorn
 fastapi
-python-multipart==0.0.5
+python-multipart
 jinja2
 numpy==1.17.0 
-scipy
 scikit-learn==1.0.2
-joblib==1.1.0
+joblib
